added html row files

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,7 @@
 /* font-family: 'Patrick Hand', cursive;
 font-family: 'Philosopher', sans-serif; */
 header{
+    background-color: black;
     height: 350px;
 }
 header h1{
@@ -9,4 +10,13 @@ header h1{
     font-size: 4rem;
     font-weight: bold;
     
+}
+header p{
+    font-family: 'Patrick Hand', cursive;
+    font-size: 1.3rem;
+}
+.card-body{
+    background-color: black;
+    color: white;
+    text-align: center;
 }
